force-app/main/default/objects/OilTypeChange__c/OilTypeChange__c.object-meta.xml
<CustomObject>
    <label>유류유형 변경</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>