force-app/main/default/objects/OilTypeChange__c/fields/attachedFile1__c.field-meta.xml
<CustomField>
    <fullName>attachedFile1__c</fullName>
    <label>증빙파일1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>