force-app/main/default/objects/OilTypeChange__c/fields/attachedFile2__c.field-meta.xml
<CustomField>
    <fullName>attachedFile2__c</fullName>
    <label>증빙파일2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>