force-app/main/default/objects/OilTypeChange__c/fields/attachedFile3__c.field-meta.xml
<CustomField>
    <fullName>attachedFile3__c</fullName>
    <label>증빙파일3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>