force-app/main/default/objects/OilTypeChange__c/fields/CarNo__c.field-meta.xml
<CustomField>
    <fullName>CarNo__c</fullName>
    <label>차량번호</label>
    <length>100</length>
    <type>Text</type>
</CustomField>