force-app/main/default/objects/OilTypeChange__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <label>종료일시</label>
    <type>DateTime</type>
</CustomField>