force-app/main/default/objects/OilTypeChange__c/fields/fm_RecordLink__c.field-meta.xml
<CustomField>
    <fullName>fm_RecordLink__c</fullName>
    <formula>(LEFT( $Api.Enterprise_Server_URL_280,FIND( &apos;/services&apos;, $Api.Enterprise_Server_URL_280))) &amp; &quot;lightning/r/OilTypeChange__c/&quot; &amp; Id &amp; &quot;/view&quot;</formula>
    <label>fm_RecordLink</label>
    <type>Text</type>
</CustomField>