force-app/main/default/objects/OilTypeChange__c/fields/isAutoApproval__c.field-meta.xml
<CustomField>
    <fullName>isAutoApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OCR 추출 결과로 데이터가 일치할 시 승인상태를 승인으로 바꾸는데 이 때에 해당됨</description>
    <label>자동승인여부</label>
    <type>Checkbox</type>
</CustomField>