force-app/main/default/objects/OilTypeChange__c/fields/isExtractOfCarNo__c.field-meta.xml
<CustomField>
    <fullName>isExtractOfCarNo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>레코드 생성시 입력한 차번호와 자동차등록증에서 OCR로 추출한 차 번호가 일치하는지 여부</description>
    <label>차번호추출값일치여부</label>
    <type>Checkbox</type>
</CustomField>