force-app/main/default/objects/OilTypeChange__c/fields/isExtractOfOilType__c.field-meta.xml
<CustomField>
    <fullName>isExtractOfOilType__c</fullName>
    <defaultValue>false</defaultValue>
    <description>레코드 생성시 선택한 유류유형과 업로드한 자동차등록증에서 OCR로 추출한 유류유형이 일치하는지 여부</description>
    <label>유류유형추출값일치여부</label>
    <type>Checkbox</type>
</CustomField>