force-app/main/default/objects/OilTypeChange__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <label>시작일시</label>
    <type>DateTime</type>
</CustomField>