force-app/main/default/objects/OilTypeChange__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>oil_type_cd__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>